# Optical-psf-mtf-toolkit

./: SupportFile.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
optics/: __init__.py  metrics.py  plotting.py  propagation.py  pupil.py
tests/: test_mtf_circular_aperture.py  test_psf_energy.py  test_strehl_defocus.py
